--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Brittany Wiedow",
   "license": "ISC",
   "dependencies": {
     "ansi-colors": "^4.1.3",
